--- a/roles/arr/lidarr/defaults/main.yml
+++ b/roles/arr/lidarr/defaults/main.yml
@@ -6,7 +6,7 @@ url: "lidarr.{{ host_local }}"
 homer_category: media
 
 ip_address: "{{ swag_base }}.5"
-data_root: /mnt/data
+# data_root: /mnt/data
 docker_dir: /opt/docker/data
 
 
