--- a/roles/experiments/deluge/defaults/main.yml
+++ b/roles/experiments/deluge/defaults/main.yml
@@ -3,5 +3,5 @@ container_name: deluge
 url: "deluge.{{ host_local }}"
 
 homer_category: media
-data_root: /mnt/data
+# data_root: /mnt/data
 ip_address: "{{ swag_base }}.10"
