--- a/run.yml
+++ b/run.yml
@@ -32,6 +32,7 @@
     - role: services/nextcloud
       tags:
         - services
+        # - containers
         - nextcloud
 
     # - role: services/seafile
@@ -42,6 +43,7 @@
     - role: heimdall  
       tags:
         - services
+        - containers
         - heimdall
 
     - role: media/jellyfin  
@@ -50,11 +52,11 @@
         - containers
         - jellyfin
   
-    - role: media/plex  
-      tags:
-        - media
-        - containers
-        - plex
+    # - role: media/plex  
+    #   tags:
+    #     - media
+    #     - containers
+    #     - plex
 
     - role: arr/sonarr  
       tags:
@@ -107,6 +109,7 @@
     - role: services/vaultwarden  
       tags:
         - services
+        - containers
         - vaultwarden
 
     # - role:  monitor/loki  
@@ -132,33 +135,39 @@
     - role:  home-automation/homeassistant  
       tags:
         - homeassistant
+        - containers
         - home-automation
   
 
     - role:  home-automation/esphome  
       tags:
         - esphome
+        - containers
         - home-automation
   
     - role:  home-automation/mqtt  
       tags:
         - mqtt
+        - containers
         - home-automation
 
     - role:  home-automation/zigbee2mqtt  
       tags:
         - zigbee2mqtt
+        - containers
         - home-automation
         
-    - role:  home-automation/frigate  
-      tags:
-        - frigate
-        - home-automation
+    # - role:  home-automation/frigate  
+    #   tags:
+    #     - frigate
+    #     - containers
+    #     - home-automation
         
     - role:  home-automation/nodered  
       tags:
         - nodered
         - node-red
+        - containers
         - home-automation
 
     - role:  minecraft  
@@ -167,30 +176,43 @@
 
     - role: services/calibre  
       tags:
+      - containers
         - calibre
 
     - role: services/trilium  
       tags:
+        - containers
         - trilium
 
     - role: services/ubooquity  
       tags:
+        - containers
         - ubooquity
 
     - role: services/kavita  
       tags:
+        - containers
         - kavita
 
     - role: services/photoprism  
       tags:
+        - containers
         - photoprism
 
     - role: services/watchtower  
       tags:
+        - containers
         - watchtower
+
+    # - role: services/traefik  
+    #   tags:
+    #     - containers
+    #     - traefik
+    #     - trafik
 
     - role: experiments/transmission-openvpn 
       tags:
+        - containers
         - transmission-openvpn
 
 # TODO: wire containers through gluetun 
