--- a/roles/experiments/transmission-openvpn/tasks/main.yml
+++ b/roles/experiments/transmission-openvpn/tasks/main.yml
@@ -35,7 +35,8 @@
     state: 'started'
     env:
       OPENVPN_PROVIDER: SURFSHARK
-      OPENVPN_CONFIG: us-dtw_udp
+      # OPENVPN_CONFIG: us-dtw_udp
+      OPENVPN_CONFIG: us-dtw.prod.surfshark.com_udp
       OPENVPN_USERNAME: "{{ vpn_username }}"
       OPENVPN_PASSWORD: "{{ vpn_password }}"
       LOCAL_NETWORK: "192.168.0.0/16,{{ media_subnet }}"
@@ -45,7 +46,7 @@
       # No idea how to actually set these
       TRANSMISSION_WEB_UI: transmission-web-control
       TRANSMISSION_RATIO_LIMIT_ENABLED: "true"
-      TRANSMISSION_DOWNLOAD_QUEUE_SIZE: "10"
+      TRANSMISSION_DOWNLOAD_QUEUE_SIZE: "25"
     volumes:
       - "{{ data_root }}/transmission/data:/data"
       # - "{{ config_root }}/transmission:/config"
