--- a/roles/arr/sonarr/tasks/main.yml
+++ b/roles/arr/sonarr/tasks/main.yml
@@ -1,12 +1,10 @@
 ---
 - name: Make sure the sonarr container is created and running
-  become: yes
   docker_container:
     image: "ghcr.io/linuxserver/sonarr"
-    name: "sonarr"
+    name: sonarr
     networks:
       - name: media_network
-        ipv4_address: "{{ sonarr_ip }}"
     ports:
       - 8989:8989
     pull: yes
@@ -17,8 +15,6 @@
       TZ: "{{ timezone }}"
     volumes:
       - "{{ config_root }}/sonarr_config:/config"
-      # - "{{ data_root }}/media/anime:/anime"
-      # - "{{ data_root }}/media/tvshows:/tvshows"
       - "{{ data_root }}/media:/media"
       - "{{ data_root }}/transmission/data/completed:/data/completed"
     restart_policy: unless-stopped
