--- a/roles/services/portainer/tasks/main.yml
+++ b/roles/services/portainer/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Make sure the portainer container is created and running
+- name: Make sure the {{ config_root }}  portainer container is created and running
   docker_container:
     image: portainer/portainer-ce
     name: portainer
@@ -16,8 +16,10 @@
       TZ: "{{ timezone }}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - "{{ config_root }}/portainer_data:/data"
+      # TODO: figure out how to handle this by server rather than hack it with a comment.
+      # For forger, the data dir won't mount so comment this out
+      # - "{{ config_root }}/portainer_data:/data"
     restart_policy: unless-stopped
-    # recreate: yes
+    recreate: yes
 
 
